--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,9 +110,9 @@
         android:layout_height="wrap_content"
         android:text="Contacts"
         android:id="@+id/button2"
+        android:onClick="getCont"
         android:layout_above="@+id/textView2"
-        android:layout_alignLeft="@+id/ZtextView5"
-        android:layout_alignStart="@+id/ZtextView5"
-        android:onClick="getCont"/>
+        android:layout_alignRight="@+id/textView2"
+        android:layout_alignEnd="@+id/textView2" />
 
 </RelativeLayout>
